Добавилена стартовая страница в моки
